Bug 421247 - Cannot decrease the size of the Places panel of the folder selector
Summary: Cannot decrease the size of the Places panel of the folder selector
Status: RESOLVED FIXED
Alias: None
Product: plasma-integration
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.18.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 423848 470885 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-09 20:53 UTC by Patrick Silva
Modified: 2025-03-15 16:36 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.4
Sentry Crash Report:


Attachments
Cannot decrease left sidebar width (175.12 KB, image/png)
2024-04-23 10:03 UTC, medin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-05-09 20:53:30 UTC
SUMMARY
We can resize the Places panel of file open/save dialogs, but we can't do it with the Places panel of folder selector.

STEPS TO REPRODUCE
1. right-click on wallpaper, choose "Configure desktop..."
2. set "Wallpaper type" to "Slideshow"
3. click on "+ Add folder..." button
4. try to resize the Places panel in the left side

OBSERVED RESULT
it's impossible to resize the Places panel, the cursor never changes to "resizing" mode

EXPECTED RESULT
Places panel of folder selector should be resizable like the ones of file open/save dialogs

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Comment 1 Patrick Silva 2020-07-03 20:19:22 UTC
*** Bug 423848 has been marked as a duplicate of this bug. ***
Comment 2 Patrick Silva 2021-09-18 19:46:46 UTC
open Location KCM, click on any button to choose another folder. Places panel is not resizable.

Operating System: Arch Linux
KDE Plasma Version: 5.22.90
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 3 Patrick Silva 2023-06-10 21:57:55 UTC
*** Bug 470885 has been marked as a duplicate of this bug. ***
Comment 4 Patrick Silva 2023-11-13 15:34:33 UTC
On Plasma 6 I can increase the sidebar size, but cannot decrease it despide the sidebar is too wide.

Operating System: Arch Linux 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 5 medin 2024-04-23 10:02:21 UTC
The weird thing is: if you decrease the whole window width, that left sidebar can get smaller, but when you grab the splitter by mouse and try to decrease its width, it refuses even if empty space is available.
Comment 6 medin 2024-04-23 10:03:18 UTC
Created attachment 168829 [details]
Cannot decrease left sidebar width
Comment 7 Luke Horwell 2025-02-19 22:18:04 UTC
The relevant class is KDirSelectDialog (from src/kdirselectdialog.cpp) from plasma-integration. I believe it may have been filed under the wrong product/component so I've corrected it.

There's a Qt splitter and a minimum size being enforced. Some related bugs:

- BUG 499179 - The weird window behaviour at small sizes.
- BUG 500435 - The width of the sidebar isn't being saved at all.
Comment 8 Luke Horwell 2025-02-20 17:28:24 UTC
I've created a merge request that fixes this (and 2 other bugs):
https://invent.kde.org/plasma/plasma-integration/-/merge_requests/168
Comment 9 Bug Janitor Service 2025-03-11 16:32:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-integration/-/merge_requests/170
Comment 10 Nate Graham 2025-03-11 16:38:31 UTC
Git commit e803b44a2ae339182564932990c436f3c0d6c533 by Nate Graham, on behalf of Luke Horwell.
Committed on 11/03/2025 at 16:30.
Pushed by ngraham into branch 'master'.

KDirSelectDialog: Fix sidebar sizing bugs
Related: bug 500435, bug 499179

499179 can't be considered fully fixed yet, as it could still rarely happen
depending on the initial state.

M  +10   -4    qt5/src/platformtheme/kdirselectdialog.cpp
M  +10   -4    qt6/src/platformtheme/kdirselectdialog.cpp

https://invent.kde.org/plasma/plasma-integration/-/commit/e803b44a2ae339182564932990c436f3c0d6c533
Comment 11 Nate Graham 2025-03-11 16:45:20 UTC
Git commit 2885b098a2275ddce9021248b6bf788b4879f42e by Nate Graham.
Committed on 11/03/2025 at 16:31.
Pushed by ngraham into branch 'Plasma/6.3'.

KDirSelectDialog: Fix sidebar sizing bugs
Related: bug 500435, bug 499179

499179 can't be considered fully fixed yet, as it could still rarely happen
depending on the initial state.



(cherry picked from commit e803b44a2ae339182564932990c436f3c0d6c533)

5d91e668 KDirSelectDialog: Improve layout sizing issues
fd59d54c KDirSelectDialog: Save sidebar width

Co-authored-by: Luke Horwell <code@horwell.me>

M  +10   -4    qt5/src/platformtheme/kdirselectdialog.cpp
M  +10   -4    qt6/src/platformtheme/kdirselectdialog.cpp

https://invent.kde.org/plasma/plasma-integration/-/commit/2885b098a2275ddce9021248b6bf788b4879f42e