KDirSelectDialog: Fix sidebar sizing bugs

BUG: 421247
BUG: 500435
CCBUG: 499179

499179 can't be considered fully fixed yet, as it could still rarely happen
depending on the initial state.